# Server_api

./: .env  Dockfile  README.md  app_01.py  app_basico.py  hello.py  pyproject.toml  requirements.clean.txt  requirements.txt
app/: .yaml  core.py  docker-compose.yaml  main.py  models.py
app/run.ps1/: run.sh
